# DUC3_harvest_plet_data

./: .gitignore  codemeta.json  pyproject.toml  readme.md  requirements.txt
docs/source/: conf.py  install.rst  usage.rst
harvest_plet/: __init__.py  _config.py  harvest_for_assessment.py  ospar_comp.py  plet.py
harvest_plet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
harvest_plet/config/: endpoints.json
tests/: test_harvest_for_assessment.py  test_ospar_comp.py  test_plet_base_url.py  test_plet_endpoints.py  test_plet_instances.py
