[build-system]
requires = ["setuptools>=62.6", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "harvest_plet"
dynamic = ["version", "dependencies"]
authors = [
    { name = "Willem Boone", email = "willem.boone@vliz.be" }
]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.package-data]
harvest_plet = ["config/*.json"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project.optional-dependencies]
docs = [
    "sphinx==7.1.2",
    "sphinx-rtd-theme==1.3.0rc1"
]
tests = [
    "pytest"
]